samples/_failures_safe/1761556339_2445a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db49beb4.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_db49beb4.c:183:5: error: expected declaration or statement at end of input
  183 |     }
      |     ^
